--- a/vignettes/fast.Rmd
+++ b/vignettes/fast.Rmd
@@ -49,7 +49,7 @@ time_net['elapsed'] / time_fast['elapsed']
 
 ## Use `n_thread`
 
-The `n_thread` argument uses multi-threading to run `aorsf` functions in parallel when possible. If you know how many threads you want, e.g. you want exactly 5, just say `n_thread = 5`. If you aren't sure how many threads you have available but want to use as many as you can, say `n_thread = 0` and `aorsf` will figure out the number for you.
+The `n_thread` argument uses multi-threading to run `aorsf` functions in parallel when possible. If you know how many threads you want, e.g. you want exactly 5, just say `n_thread = 5`. If you aren't sure how many threads you have available but want to use a feasible amount, using `n_thread = 0` tells `aorsf` to do that for you. 
 
 ```{r}
 
@@ -62,21 +62,21 @@ orsf(pbc_orsf,
 
 ```
 
-Because R is a single threaded language, multi-threading cannot be applied when `orsf()` needs to call R functions from C++, which occurs when a customized R function is used to find linear combination of variables or compute prediction accuracy.
+The default value for `n_thread` is 0, but sometimes multi-threading is not possible. For example, because R is a single threaded language, multi-threading cannot be applied when `orsf()` needs to call R functions from C++, which occurs when a customized R function is used to find linear combination of variables or compute prediction accuracy.
 
 ## Do less
 
 There are some defaults in `orsf()` that can be adjusted to make it run faster:
 
-- set `n_retry` to 0 instead of 3 (the default)
+- set `n_retry` to 0 
 
-- set `oobag_pred_type` to 'none' instead of 'surv' (the default)
+- set `oobag_pred_type` to 'none' 
 
-- set 'importance' to 'none' instead of 'anova' (the default)
+- set 'importance' to 'none' 
 
 - increase `split_min_events`, `split_min_obs`, `leaf_min_events`, or `leaf_min_obs` to make trees stop growing sooner
 
-- increase `split_min_stat` to make trees stop growing sooner
+- increase `split_min_stat` to enforce more strict requirements for growing deeper trees.
 
 Applying these tips:
 
@@ -107,6 +107,28 @@ verbose_fit <- orsf(pbc_orsf,
                     formula = time+status~. -id, 
                     n_tree = 5, 
                     verbose_progress = TRUE)
+
+```
+
+## Don't wait. Estimate!
+
+Instead of running a model and hoping it will be fast, you can estimate how long a specification of that model will take by using `no_fit = TRUE` in the call to `orsf()`.
+
+```{r}
+
+fit_spec <- orsf(pbc_orsf, 
+                 formula = time+status~. -id, 
+                 control = orsf_control_survival(method = 'net'), 
+                 n_tree = 2000,
+                 no_fit = TRUE)
+
+# how much time it takes to estimate training time:
+system.time(
+ time_est <- orsf_time_to_train(fit_spec, n_tree_subset = 5)
+)
+
+# the estimated training time:
+time_est
 
 ```
 
