--- a/vignettes/fast.Rmd
+++ b/vignettes/fast.Rmd
@@ -42,14 +42,14 @@ time_net <- system.time(
              n_tree = 5)
 )
 
-# control_fast() is much faster
+# unspecified control is much faster
 time_net['elapsed'] / time_fast['elapsed']
 
 ```
 
 ## Use `n_thread`
 
-The `n_thread` argument uses multi-threading to run `aorsf` functions in parallel when possible. If you know how many threads you want, e.g. you want exactly 5, just say `n_thread = 5`. If you aren't sure how many threads you have available but want to use a feasible amount, using `n_thread = 0` tells `aorsf` to do that for you. 
+The `n_thread` argument uses multi-threading to run `aorsf` functions in parallel when possible. If you know how many threads you want, e.g. you want exactly 5, set `n_thread = 5`. If you aren't sure how many threads you have available but want to use a feasible amount, using `n_thread = 0` (the default) tells `aorsf` to do that for you. 
 
 ```{r}
 
@@ -62,17 +62,17 @@ orsf(pbc_orsf,
 
 ```
 
-The default value for `n_thread` is 0, but sometimes multi-threading is not possible. For example, because R is a single threaded language, multi-threading cannot be applied when `orsf()` needs to call R functions from C++, which occurs when a customized R function is used to find linear combination of variables or compute prediction accuracy.
+Note: sometimes multi-threading is not possible. For example, because R is a single threaded language, multi-threading cannot be applied when `orsf()` needs to call R functions from C++, which occurs when a customized R function is used to find linear combination of variables or compute prediction accuracy.
 
 ## Do less
 
-There are some defaults in `orsf()` that can be adjusted to make it run faster:
+There are some inputs in `orsf()` that can be adjusted to make it run faster:
 
-- set `n_retry` to 0 
+- set `n_retry` to `0` 
 
-- set `oobag_pred_type` to 'none' 
+- set `oobag_pred_type` to `'none'` 
 
-- set 'importance' to 'none' 
+- set `importance` to `'none'` 
 
 - increase `split_min_events`, `split_min_obs`, `leaf_min_events`, or `leaf_min_obs` to make trees stop growing sooner
 
@@ -95,7 +95,7 @@ orsf(pbc_orsf,
 
 ```
 
-While these default values do make `orsf()` run slower, they also usually make its predictions more accurate or make the fit easier to interpret. 
+While modifying these inputs can make `orsf()` run faster, they can also impact prediction accuracy. 
 
 ## Show progress
 
